src/test/ui/try-block/try-block-in-while.stderr
error[E0277]: the trait bound `bool: Try` is not satisfied
  --> $DIR/try-block-in-while.rs:6:17
   |
LL |     while try { false } {}
   |                 ^^^^^ the trait `Try` is not implemented for `bool`
   |
   = note: required by `from_ok`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
